--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1>SITH CIPHER CHALLENGE</h1>
     <p>DECODE: <strong>GFKU MTCF</strong></p>
     <p>CLUE: Shift each letter back by 2, then reverse the word.</p>
-    <input type="text" id="answer" placeholder="ENTER DECODED WORD">
+    <input type="text" id="answer" placeholder="DECODED PHRASE">
     <button onclick="checkAnswer()">SUBMIT</button>
     <div id="result"></div>
   </div>
